--- a/gb/19/12/8/n11708547.md
+++ b/gb/19/12/8/n11708547.md
@@ -1,54 +1,60 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/rywys229/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/1.jpg" title="´ó¼ÍÔª"></a><a href="https://github.com/rywys229/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/3.jpg" title="¹ú¼ÊÐÂÎÅ"></a><a href="https://github.com/rywys229/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/4.jpg" title="´óÂ½ÐÂÎÅ"></a><a href="https://github.com/rywys229/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/5.jpg" title="ÆÀÂÛ"></a><a href="https://github.com/rywys229/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/6.jpg" title="ÎÄ»¯"></a><a href="https://github.com/rywys229/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/7.jpg" title="Éú»î"></a><a href="https://github.com/rywys229/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/8.jpg" title="ÓéÀÖ"></a><a href="https://github.com/rywys229/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/9.jpg" title="½¡¿µ"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/10.jpg" title="¹ºÎï"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/12.jpg" title="¾è¿î"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/9p.md#1">ÉçÂÛ</a> | <a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/nf5657.md#1">ÈýÍË</a> | <a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/nf6123.md#1">Ëß½­</a> | <a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/nf1176117.md#1">ÖÐ¹²Âô¹ú</a> | <a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/nf5773.md#1">Ì°¸¯ÒùÂÒ</a> | <a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/nf1176115.md#1">´Ü¸ÄÀúÊ·</a> | <a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/nf1176107.md#1">µ³¿ý»­Æ¤</a> | <a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/nf1320400.md#1">ÖÐ¹²¼äµý</a> | <a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/nf1176114.md#1">ÆÆ»µ´«Í³</a> | <a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/nf5287.md#1">¶ñ¹áÂúÓ¯</a> | <a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/ncid278.md#1">ÈËÈ¨</a> | <a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/nf1176111.md#1">ÆÈº¦</a> | <a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/nf1235328.md#1">Êé¼®</a> | <a target="_blank" href="https://github.com/rywys229/www/blob/master/README.md?zsrh#1">·­Ç½</a></p><p><a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/nf5562.md#1">Î±»ð</a> | <a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/nf4378.md#1">ÎÊ´ð</a> | <a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/nf5792.md#1">ÆÊÎö</a> | <a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/nf5735.md#1">Á½°¶±È¶Ô</a> | <a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/nf6119.md#1">¸÷¹ú°ý½±</a> | <a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/nf6120.md#1">ÃñÖÚÉùÔ®</a> | <a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/nf1188594.md#1">ÄÑÍü¼ÇÒä</a> | <a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/nf3180.md#1">º£Íâºë´«</a> | <a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/nf5410.md#1">ÍòÈËÉÏ·Ã</a> | <a target="_blank" href="https://github.com/rywys229/ntdtv/blob/master/gb/prog1530_1.md#1">ºÍÆ½¿¹Òé</a> | <a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/nf4386.md#1">Ö§³Ö</a> | <a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/nf4389.md#1">ÕæÏà</a> | <a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/nf5790.md#1">Ê¥Ôµ</a> | <a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/nf4786.md#1">ÉñÔÏ</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>µ³ÄÚÓõÎâË¹»³ÍË²»·ÖÇø Îâ¶ØÒå£º²»ÄÜËæ±ã°Îµô</h2>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/1.jpg" title="å¤§çºªå…ƒ"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/3.jpg" title="å›½é™…æ–°é—»"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/4.jpg" title="å¤§é™†æ–°é—»"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/5.jpg" title="è¯„è®º"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/6.jpg" title="æ–‡åŒ–"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/7.jpg" title="ç”Ÿæ´»"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/8.jpg" title="å¨±ä¹"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/9.jpg" title="å¥åº·"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/10.jpg" title="è´­ç‰©"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/12.jpg" title="ææ¬¾"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/9p.md#1">ç¤¾è®º</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5657.md#1">ä¸‰é€€</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6124.md#1">è¯‰æ±Ÿ</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176117.md#1">ä¸­å…±å–å›½</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5773.md#1">è´ªè…æ·«ä¹±</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176115.md#1">çªœæ”¹åŽ†å²</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176107.md#1">å…šé­ç”»çš®</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1320400.md#1">ä¸­å…±é—´è°</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176114.md#1">ç ´åä¼ ç»Ÿ</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog447_1.md#1">æ¶è´¯æ»¡ç›ˆ</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/ncid278.md#1">äººæƒ</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176111.md#1">è¿«å®³</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">æœŸåˆŠ</a> | <a target="_blank" href="https://github.com/tjvrql262/www/blob/master/README.md?zsrh#8">ç¿»å¢™</a></p><p><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5562.md#1">ä¼ªç«</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4378.md#1">é—®ç­”</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5792.md#1">å‰–æž</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5735.md#1">ä¸¤å²¸æ¯”å¯¹</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6119.md#1">å„å›½è¤’å¥–</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6120.md#1">æ°‘ä¼—å£°æ´</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1188594.md#1">éš¾å¿˜è®°å¿†</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf3180.md#1">æµ·å¤–å¼˜ä¼ </a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5410.md#1">ä¸‡äººä¸Šè®¿</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog1530_1.md#1">å’Œå¹³æŠ—è®®</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4386.md#1">æ”¯æŒ</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4389.md#1">çœŸç›¸</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5790.md#1">åœ£ç¼˜</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4786.md#1">ç¥žéŸµ</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>å…šå†…åå´æ–¯æ€€é€€ä¸åˆ†åŒº å´æ•¦ä¹‰ï¼šä¸èƒ½éšä¾¿æ‹”æŽ‰</h2>
 
 <h6></h6>
 <hr>
-<p>¡¾´ó¼ÍÔª2019Äê12ÔÂ08ÈÕÑ¶¡¿£¨´ó¼ÍÔª¼ÇÕßÎâ•FÖÞÌ¨ÍåÌ¨±±±¨µ¼£©ÍË½«<a href="https://github.com/rywys229/djy/blob/master/gb/tag/%E5%90%B4%E6%96%AF%E6%80%80.md">ÎâË¹»³</a>ÁÐ<a href="https://github.com/rywys229/djy/blob/master/gb/tag/%E5%9B%BD%E6%B0%91%E5%85%9A.md">¹úÃñµ³</a><a href="https://github.com/rywys229/djy/blob/master/gb/tag/%E4%B8%8D%E5%88%86%E5%8C%BA.md">²»·ÖÇø</a>Á¢Î¯Ãûµ¥ÈÇÒé£¬Íâ´«ÓÐÀ¶Î¯ÈÏÎª£¬<a href="https://github.com/rywys229/djy/blob/master/gb/tag/%E5%90%B4%E6%96%AF%E6%80%80.md">ÎâË¹»³</a>ÐÎÏóÓ°ÏìÁ¢Î¯Ñ¡Çé£¬ÒªÇóÎâ×Ô¶¯ÍË³ö¡£<a href="https://github.com/rywys229/djy/blob/master/gb/tag/%E5%9B%BD%E6%B0%91%E5%85%9A.md">¹úÃñµ³</a>Ö÷Ï¯<a href="https://github.com/rywys229/djy/blob/master/gb/tag/%E5%90%B4%E6%95%A6%E4%B9%89.md">Îâ¶ØÒå</a>8ÈÕ±íÊ¾£¬²»·ÖÇøÃûµ¥¾­¹ýÌáÃûÉó²éÐ¡×é¡¢ÖÐ³£»á2´Î»áÒé¡¢È«ÌåÖÐÑëÎ¯Ô±»áÒé£¬½øÐÐÕýÊ½Í¶Æ±²úÉúµÄÃûµ¥£¬²»ÄÜËæ±ã°Îµô£¬ËûÒ²ÈÏÎªµ³ÄÚ²»Ó¦¸ÃÈ¥Ôð±¸ÎâË¹»³¡£</p>
-<p>2016Äê£¬ÎâË¹»³ÂÊ30¶àÎ»Ì¨ÍåÍËÐÝ½«ÁìÖÁÖÐ¹ú´óÂ½£¬²Î¼Ó¡°¼ÍÄîËïÖÐÉ½ÏÈÉúµ®³½150ÖÜÄê´ó»á¡±£¬Òý·¢¸÷½çÕùÒé¡£¹úÃñµ³Ì¨±±ÊÐÒéÔ±ÐìÇÉÐ¾ÈÕÇ°±íÊ¾£¬ÎâË¹»³ÁÐ<a href="https://github.com/rywys229/djy/blob/master/gb/tag/%E4%B8%8D%E5%88%86%E5%8C%BA.md">²»·ÖÇø</a>¶Ô¹úÃñµ³Ñ¡ÇéÊÇ¡°Ñ©ÉÏ¼ÓËª¡±£¬¶ÔÓÚÇøÓòÁ¢Î¯Ò²ÓÐÓ°Ïì¡£¾ÍËýÁË½â¡¢ÑéÖ¤Ö®ºó£¬¡°´ó¸ÅÊÇµôÁË5%×óÓÒ£¬Õâ¸öÎÒÏëÒ²²»»äÑÔ¡±¡£</p>
-<p>±»ÎÊµ½µ³ÄÚÓÐÉùÒôÏ£ÍûÎâË¹»³×ÔÐÐÍË³ö²»·ÖÇøÃûµ¥£¬<a href="https://github.com/rywys229/djy/blob/master/gb/tag/%E5%90%B4%E6%95%A6%E4%B9%89.md">Îâ¶ØÒå</a>±íÊ¾£¬ÕâÊÇ¾­¹ýÌáÃûÉó²éÐ¡×é¡¢ÖÐ³£»á2´Î»áÒéÒÔ¼°¾­¹ýÈ«ÌåÖÐÑëÎ¯Ô±»áÒéÕýÊ½Í¶Æ±²úÉúµÄÃûµ¥£¬¡°²»ÊÇËæ±ã¿ÉÒÔ°ÑËû°Îµô¡±¡£</p>
-<p>Îâ¶ØÒåËµ£¬ÎâË¹»³´ÓÄêÇá¾Í°®¹ú¼Ò¡¢°®Éç»á£¬ÒÔÉíÀ´»¤ÎÀ¹ú¼ÒµÄ½«Áì£¬¾ÍÊÇÈ¥²Î¼ÓÖÐ»ªÃñ¹ú¹ú¸¸ËïÖÐÉ½ÏÈÉúÚ¤µ®150ÖÜÄê¼ÍÄî»î¶¯£¬ËäÈ»Õâ³¡»î¶¯ÊÇÖÐ¹²¾Ù°ìµÄ£¬ÆÚ¼äÒ²ÓÐºÜ¶àÍË³ýÒÛ¹Ù±ø²ÎÓë£¬µ«ËûÈÏÎª²»Ó¦¸ÃÔð±¸ÎâË¹»³¡£</p>
-<p>ÔðÈÎ±à¼­£ºÓñÕä</p>
+<p>ã€å¤§çºªå…ƒ2019å¹´12æœˆ08æ—¥è®¯ã€‘ï¼ˆå¤§çºªå…ƒè®°è€…å´æ—»æ´²å°æ¹¾å°åŒ—æŠ¥å¯¼ï¼‰é€€å°†<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%90%B4%E6%96%AF%E6%80%80.md#1">å´æ–¯æ€€</a>åˆ—<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%9B%BD%E6%B0%91%E5%85%9A.md#1">å›½æ°‘å…š</a><ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E4%B8%8D%E5%88%86%E5%8C%BA.md#1">ä¸åˆ†åŒº</a>ç«‹å§”åå•æƒ¹è®®ï¼Œå¤–ä¼ æœ‰è“å§”è®¤ä¸ºï¼Œ<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%90%B4%E6%96%AF%E6%80%80.md#1">å´æ–¯æ€€</a>å½¢è±¡å½±å“ç«‹å§”é€‰æƒ…ï¼Œè¦æ±‚å´è‡ªåŠ¨é€€å‡ºã€‚<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%9B%BD%E6%B0%91%E5%85%9A.md#1">å›½æ°‘å…š</a>ä¸»å¸­<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%90%B4%E6%95%A6%E4%B9%89.md#1">å´æ•¦ä¹‰</a>8æ—¥è¡¨ç¤ºï¼Œä¸åˆ†åŒºåå•ç»è¿‡æåå®¡æŸ¥å°ç»„ã€ä¸­å¸¸ä¼š2æ¬¡ä¼šè®®ã€å…¨ä½“ä¸­å¤®å§”å‘˜ä¼šè®®ï¼Œè¿›è¡Œæ­£å¼æŠ•ç¥¨äº§ç”Ÿçš„åå•ï¼Œä¸èƒ½éšä¾¿æ‹”æŽ‰ï¼Œä»–ä¹Ÿè®¤ä¸ºå…šå†…ä¸åº”è¯¥åŽ»è´£å¤‡å´æ–¯æ€€ã€‚</p>
+<p>2016å¹´ï¼Œå´æ–¯æ€€çŽ‡30å¤šä½å°æ¹¾é€€ä¼‘å°†é¢†è‡³ä¸­å›½å¤§é™†ï¼Œå‚åŠ â€œçºªå¿µå­™ä¸­å±±å…ˆç”Ÿè¯žè¾°150å‘¨å¹´å¤§ä¼šâ€ï¼Œå¼•å‘å„ç•Œäº‰è®®ã€‚å›½æ°‘å…šå°åŒ—å¸‚è®®å‘˜å¾å·§èŠ¯æ—¥å‰è¡¨ç¤ºï¼Œå´æ–¯æ€€åˆ—<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E4%B8%8D%E5%88%86%E5%8C%BA.md#1">ä¸åˆ†åŒº</a>å¯¹å›½æ°‘å…šé€‰æƒ…æ˜¯â€œé›ªä¸ŠåŠ éœœâ€ï¼Œå¯¹äºŽåŒºåŸŸç«‹å§”ä¹Ÿæœ‰å½±å“ã€‚å°±å¥¹äº†è§£ã€éªŒè¯ä¹‹åŽï¼Œâ€œå¤§æ¦‚æ˜¯æŽ‰äº†5%å·¦å³ï¼Œè¿™ä¸ªæˆ‘æƒ³ä¹Ÿä¸è®³è¨€â€ã€‚</p>
+<p>è¢«é—®åˆ°å…šå†…æœ‰å£°éŸ³å¸Œæœ›å´æ–¯æ€€è‡ªè¡Œé€€å‡ºä¸åˆ†åŒºåå•ï¼Œ<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%90%B4%E6%95%A6%E4%B9%89.md#1">å´æ•¦ä¹‰</a>è¡¨ç¤ºï¼Œè¿™æ˜¯ç»è¿‡æåå®¡æŸ¥å°ç»„ã€ä¸­å¸¸ä¼š2æ¬¡ä¼šè®®ä»¥åŠç»è¿‡å…¨ä½“ä¸­å¤®å§”å‘˜ä¼šè®®æ­£å¼æŠ•ç¥¨äº§ç”Ÿçš„åå•ï¼Œâ€œä¸æ˜¯éšä¾¿å¯ä»¥æŠŠä»–æ‹”æŽ‰â€ã€‚</p>
+<p>å´æ•¦ä¹‰è¯´ï¼Œå´æ–¯æ€€ä»Žå¹´è½»å°±çˆ±å›½å®¶ã€çˆ±ç¤¾ä¼šï¼Œä»¥èº«æ¥æŠ¤å«å›½å®¶çš„å°†é¢†ï¼Œå°±æ˜¯åŽ»å‚åŠ ä¸­åŽæ°‘å›½å›½çˆ¶å­™ä¸­å±±å…ˆç”Ÿå†¥è¯ž150å‘¨å¹´çºªå¿µæ´»åŠ¨ï¼Œè™½ç„¶è¿™åœºæ´»åŠ¨æ˜¯ä¸­å…±ä¸¾åŠžçš„ï¼ŒæœŸé—´ä¹Ÿæœ‰å¾ˆå¤šé€€é™¤å½¹å®˜å…µå‚ä¸Žï¼Œä½†ä»–è®¤ä¸ºä¸åº”è¯¥è´£å¤‡å´æ–¯æ€€ã€‚</p>
+<p>è´£ä»»ç¼–è¾‘ï¼šçŽ‰ç</p>
 
 <hr>
 
-#### ±¾ÎÄ×ª×Ô<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>£¨¹úÄÚÐèÓÃ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>²ÅÄÜ·ÃÎÊ£©
-> Ô­ÎÄ£º<a href="http://www.epochtimes.com/gb/19/12/8/n11708547.htm">µ³ÄÚÓõÎâË¹»³ÍË²»·ÖÇø Îâ¶ØÒå£º²»ÄÜËæ±ã°Îµô</a>
 
-
-#### ÏÂÔØ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>Ïà¹ØÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/12/6/n11705044.htm">º«ÓªÑ¡Õ½Î´»ñ²¹Öú ¹úÃñµ³£º×Ê²úÔâ¶³½á</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/1/n11693223.htm">¹úÃñµ³¾ÈÑ¡Çé Ãç²©ÑÅ£ºÓ¦³ÐÈÏÖÐ¹²½éÑ¡</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/1/n11693065.htm">ÎâË¹»³£ºÃñ½øµ³ÅÂÎÒ Íõ¶¨Óî£ºÅÂÎâÐ¹ÃÜ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/29/n11689839.htm">½øÁ¢Ôº¿ÖÎ£º¦¹ú°² ÎââùÅ©·¢ÆðÈ«ÃñÏÂ¼ÜÎâË¹»³</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/28/n11686946.htm">ÂÞÎÄ¼ÎÏòÎâ¶ØÒåº°»°£ºÃñÖ÷Áô¸øÏÂÒ»´ú</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/26/n11681422.htm">²»·ÖÇøÖ®ÂÒ ÖìÁ¢Â×£ºÖØ´´Ñ¡Çé5~10%</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/25/n11679422.htm">Ì¨ÍÅ½áÁªÃË¾Ù±¨¹ù¹ÚÓ¢¼°ÎâË¹»³ÉæÖÐ¹²¼äµý</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/22/n11674098.htm">ÇñÒãÁÐÐÂµ³²»·ÖÇøÊ×Î» ¿ÂP£ºÏñ¹²²úµ³ÌáÃûµÄ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/21/n11671471.htm">·¢ÎÄÖÂÎâ¶ØÒå ×¿ÈÙÌ©£º¹óµ³Ãûµ¥ÊÇ¹ú°²ÍþÐ²</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/20/n11668495.htm">Îâ¶ØÒå°ÑÃñÖÚµ³ÁÐ·ºÀ¶ÁªÃË£¿¿Â£ºÎâÏëÑ¡Á¢ÔºÁúÍ·</a></li>
-
-#### ÏÂÔØ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>ÈÈÃÅÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/12/7/n11707638.htm">¡¾ÐÂÎÅ¿´µã¡¿±±¾©½ÓÊÜGDP±£4Õù5£¿¾­¼ÃÓÐ¶àÔã</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/7/n11707124.htm">Ì¨Á¢Î¯£ºÂíÓ¢¾ÅÔøÓÚ×ÜÍ³¸®½Ó¼ûÖÐ¹²ÕþÐ­Î¯Ô±</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/7/n11707250.htm">´¨ÆÕºôÓõÊÀ½çÒøÐÐÍ£Ö¹½è¿î¸øÖÐ¹²</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/7/n11707668.htm">ÖÐ¹úÕ®ÎñÎ¥Ô¼¶ñ»¯ Ì¨11ÒøÐÐÁªºÏ´û¿îÖÐÆó²ÈÀ×</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/26/n11682462.htm">ÔÚ´óÊÇ´ó·ÇÃæÇ° Ã»ÓÐÖÐÁ¢</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/1/n11693210.htm">¡°ÈýÊÀÒò¹û¡±ÉÆ¶ñÓÐ±¨ ÎªºÎÓÐÊ±¿´²»µ½¹û±¨£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/25/n11679911.htm">ÆæÃÎÔ¤Õ×£º¸ÄÃûéóÊÂ ×ªÊÀÆæÎÅ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/28/n11688048.htm">Ãñ¹ú¾ü·§¼ûÖ¤Ææ¼££ºÄº´ºÆíÑ© ÈËÌå×Ô»¯</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/5/n11703982.htm">¸ßÒÔÏèÔøÊÎÑÝÇòÐÇ¼ª†´ Á½ÈËÏà¸ô°ËÌìÏÈºóÀëÊÀ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/6/n11706340.htm">ÖÐ¹²³ÍÖÎË«ÖØ¹ú¼®£¿ÀîÁ¬½ÜµÈÃ÷ÐÇ±»Íø¾¯µãÃû</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/6/n11705859.htm">¾©¾çÑÝÔ±½ªÒàÉº×ÔçËÉíÍö ´«ÆäÕÉ·ò±»²é</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/9/n11643661.htm">¡¾Ë¼ÏëÁìÐä¡¿Ïã¸Û¿¹ÒéÊÇ¡°ÐÂÀäÕ½¡±Ç°Ïß£¨ÏÂ£©</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/7/n11706734.htm">¡¾ÅÄ°¸¾ªÆæ¡¿12.8ÃñÕóÓÎÐÐÇ°Õ° ¸ÛÈËÎªºÎ¼á³Ö£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/6/n11706002.htm">¡¾ÐÂÎÅ¿´µã¡¿Ã³Ò×Ì¸ÅÐ±±¾©¶à±ä ´¨ÆÕ£º¿´Çé¿ö</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/5/n11703982.htm">¸ßÒÔÏèÔøÊÎÑÝÇòÐÇ¼ª†´ Á½ÈËÏà¸ô°ËÌìÏÈºóÀëÊÀ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/5/n11703718.htm">·¶±ù±ù¸°ÃÀÎªºÃÀ³ÎëÓ°Æ¬ÅäÒô Éí²Ä·¢¸£ÒýÈÈÒé</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/6/n11705012.htm">YouTubeÄê¶ÈÈÈÃÅMVÅÅÐÐ ËÄ×éº«ÍÅ±íÏÖÁÁÑÛ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/6/n11706422.htm">¸ßÒÔÏèÖèÊÅÊÂ¼þ ½ÚÄ¿·½Öí¶ÓÓÑ·¢ÎÄÈÇÅ­ÍøÓÑ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/6/n11706258.htm">´óÏ·°æ¡¶Ô¸ÈÙ¹â¡·³öÂ¯ ´´×÷Õß£ºÒÔÔÁ¾ç¾ÛÈËÐÄ</a></li>
+<strong>ç›¸å…³æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/12/6/n11705044.md#1">éŸ©è¥é€‰æˆ˜æœªèŽ·è¡¥åŠ© å›½æ°‘å…šï¼šèµ„äº§é­å†»ç»“</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/12/1/n11693223.md#1">å›½æ°‘å…šæ•‘é€‰æƒ… è‹—åšé›…ï¼šåº”æ‰¿è®¤ä¸­å…±ä»‹é€‰</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/12/1/n11693065.md#1">å´æ–¯æ€€ï¼šæ°‘è¿›å…šæ€•æˆ‘ çŽ‹å®šå®‡ï¼šæ€•å´æ³„å¯†</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/11/29/n11689839.md#1">è¿›ç«‹é™¢æå±å®³å›½å®‰ å´æ€¡å†œå‘èµ·å…¨æ°‘ä¸‹æž¶å´æ–¯æ€€</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/11/28/n11686946.md#1">ç½—æ–‡å˜‰å‘å´æ•¦ä¹‰å–Šè¯ï¼šæ°‘ä¸»ç•™ç»™ä¸‹ä¸€ä»£</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/11/26/n11681422.md#1">ä¸åˆ†åŒºä¹‹ä¹± æœ±ç«‹ä¼¦ï¼šé‡åˆ›é€‰æƒ…5~10%</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/11/25/n11679422.md#1">å°å›¢ç»“è”ç›Ÿä¸¾æŠ¥éƒ­å† è‹±åŠå´æ–¯æ€€æ¶‰ä¸­å…±é—´è°</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/11/22/n11674098.md#1">é‚±æ¯…åˆ—æ–°å…šä¸åˆ†åŒºé¦–ä½ æŸ¯Pï¼šåƒå…±äº§å…šæåçš„</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/11/21/n11671471.md#1">å‘æ–‡è‡´å´æ•¦ä¹‰ å“è£æ³°ï¼šè´µå…šåå•æ˜¯å›½å®‰å¨èƒ</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/11/20/n11668495.md#1">å´æ•¦ä¹‰æŠŠæ°‘ä¼—å…šåˆ—æ³›è“è”ç›Ÿï¼ŸæŸ¯ï¼šå´æƒ³é€‰ç«‹é™¢é¾™å¤´</a></li>
 <hr>
 
-#### ÊÖ»úÉÏ³¤°´²¢¸´ÖÆÏÂÃæ¶þÎ¬Âë·ÖÏí±¾ÎÄÕÂ£º<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/rywys229/djy/blob/master/gb/19/12/8/n11708547.md%231" title="·ÖÏí±¾ÎÄÕÂ"></td><td VALIGN=TOP><a href="https://github.com/rywys229/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rywys229/djy/master/gb/300/wei-f1.jpg" title="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"  alt="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"></a><br><a href="https://github.com/rywys229/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/rywys229/djy/master/gb/300/yong-h.jpg" title="ÓÀºãµÄ¼ûÖ¤"  alt="ÓÀºãµÄ¼ûÖ¤"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rywys229/djy/master/gb/300/shang-lnz.jpg" title="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"  alt="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rywys229/djy/master/gb/300/huo-z3.jpg" title="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"  alt="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rywys229/djy/master/gb/300/huo-z4.jpg" title="Ö¤ÈËÃèÊö»îÕª¿Ö²À"  alt="Ö¤ÈËÃèÊö»îÕª¿Ö²À"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rywys229/djy/master/gb/300/huo-z1.jpg" title="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"  alt="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rywys229/djy/master/gb/300/ma-ks.jpg" title="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"  alt="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rywys229/djy/master/gb/300/chang-zs.jpg" title="²Ø×ÖÊ¯ ÔÌÌì»ú"  alt="²Ø×ÖÊ¯ ÔÌÌì»ú"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rywys229/djy/master/gb/300/st1.jpg" title="¹Ø×¢3ÒÚÈËÈýÍË"  alt="¹Ø×¢3ÒÚÈËÈýÍË"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rywys229/djy/master/gb/300/jie-t.jpg" title="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"  alt="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rywys229/djy/master/gb/300/gao-zs.jpg" title="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"  alt="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rywys229/djy/master/gb/300/sj1.jpg" title="303ÍòÈË¾Ù±¨½­ÔóÃñ"  alt="303ÍòÈË¾Ù±¨½­ÔóÃñ"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rywys229/djy/master/gb/300/sj2.jpg" title="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"  alt="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rywys229/djy/master/gb/300/liangan.jpg" title="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"  alt="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rywys229/djy/master/gb/300/jia-ndzl.jpg" title="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"  alt="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rywys229/djy/master/gb/300/xiao-wd.jpg" title="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"  alt="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rywys229/djy/master/gb/300/yindu.jpg" title="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"  alt="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rywys229/djy/master/gb/300/xie-j.jpg" title="²»Ò»ÑùµÄº£ÍâÐ£Ô°"  alt="²»Ò»ÑùµÄº£ÍâÐ£Ô°"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rywys229/djy/master/gb/300/li-up.jpg" title="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"  alt="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rywys229/djy/master/gb/300/zfl2.jpg" title="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"  alt="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rywys229/djy/master/gb/300/zhen-h.jpg" title="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"  alt="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rywys229/djy/master/gb/300/dalu-sk.jpg" title="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"  alt="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rywys229/djy/master/gb/300/zfl1.jpg" title="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"  alt="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"></a><br><a href="https://github.com/rywys229/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rywys229/djy/master/gb/300/fq1.jpg" title="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"  alt="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"></a><br></td></tr></table>
+
+<strong>ç¼–è¾‘æŽ¨èï¼š</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11935263.md#1">æ¾³åŒ»å­¦åä¼šè¥¿æ¾³ä¸»å¸­ï¼šå­¦æ ¡å°†å…³é—­</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/10/n10207223.md#1" target="_blank">å…±äº§æš´æ”¿å½•ï¼šå„¿å­å‘Šå‘æ¯äº²è‡´å…¶æ¯è¢«å¤„å†³</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/10/2/n9691133.md#1" target="_blank">ä»Žä¸Šæµ·åˆ°å·´é»Ž å‰å›½ä¼é«˜ç®¡çš„åšå®ˆä¹‹è·¯</a></li>
+<hr>
+
+<strong>çƒ­é—¨æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936484.md#1">ä¸­å…±å‘è¨€äººèµ–ç¾Žå†›å¸¦ç–«æƒ…åˆ°æ­¦æ±‰ å›½é™…å“—ç„¶</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11937929.md#1">é™ˆæ—¶ä¸­ï¼šä¸­å…±è°ˆç–«æƒ…æ²¡äººä¿¡ WHOä»€ä¹ˆéƒ½ä¸è¯´</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936755.md#1">ã€æœ€æ–°ç–«æƒ…3.13ã€‘å·æ™®ï¼šæˆ‘å’Œä¹ éƒ½çŸ¥ç—…æ¯’æ¥æº</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936666.md#1">ç¾Žå›½CDCæ‰¿è®¤äº†ä»€ä¹ˆï¼Ÿä¸­å…±å†é€ å‡</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/18/n11877949.md#1">å¤ä»Šä¸­å¤–é¢„è¨€ä¸­çš„2020å¹´</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/5/n11918064.md#1">ã€æ–‡å²ã€‘ä¸ºä¸€åœºåœ°éœ‡ å†¥ç•Œç­¹å¤‡äº†50å¹´</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/6/n11920009.md#1">çš‡ä¸Šå¯¹è—è™«è¯´äº†ä¸€å¥è¯ æ¼«å¤©è—ç¾å½»åº•æ¶ˆå¤±</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11926997.md#1">ä¸­å›½ç­‰å›½ä¸ºä½•ç–«æƒ…ä¸¥é‡ï¼ŸçŠ¹å¤ªæ‹‰æ¯”ï¼šç¥žåœ¨é™¤æ¶</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934088.md#1">ä¼ é’Ÿå—å±±è¢«å…èŒ ä¸“å®¶ç»„ç»„é•¿æ‚„æ‚„æ¢äººå†…å¹•</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936289.md#1">ã€æ–°é—»çœ‹ç‚¹ã€‘å‘å“¨äººå¼•çˆ†èˆ†æƒ… ä¹ è®¿æ­¦æ±‰ å®˜å®£ç ´äº§</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936264.md#1">å­æ„Ÿé«˜ä»·èœå¼•çˆ†å¤§è§„æ¨¡æŠ—è®® å¸‚æ°‘æ€’å–Šâ€œä¸‹è¯¾â€</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938828.md#1">ã€æ–°é—»çœ‹ç‚¹ã€‘ç”©é”…ç¾Žå†› ä¸­å…±å¤–äº¤éƒ¨æ¼”åŒç°§ï¼Ÿ</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11927966.md#1">ã€ç½—åŽ¨å¯»å‘³ã€‘è…Šå‘³ç‚’è·å…°è±†</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938032.md#1">çˆ¶æ¯æŸ“ç–«åŽ»ä¸– æ­¦æ±‰é’å±±åŒºçˆ†å­¤å„¿éš”ç¦»ç‚¹</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11935159.md#1">ä¸–å«æ”¹æ­¦æ±‰è‚ºç‚Žåç§° é»„ç§‹ç”Ÿæ–¥è´£èŽ·ç½‘å‹èµžçˆ†</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934318.md#1">â€œå¥³ç‰ˆé»„å®‰â€åˆ˜ä¹å¦è¿”å°ä½é™¢ç”¨å¥ä¿ ç½‘å‹ç‚®è½°</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/11/n11933566.md#1">ä¼ ä¸­å…±å¹¿ç”µå±€ä¸‹é™ç±ä»¤ åˆ˜äº¦è²å´äº¦å‡¡æˆ–å—å½±å“</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936148.md#1">æ„å¤§åˆ©ä¸ºä½•ç–«æƒ…ä¸¥é‡ï¼Ÿæ„è£”å°æ¹¾ç”·æ˜ŸæžåŽŸå› </a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/11/n11933325.md#1">å´äº¦å‡¡ä»ŽåŠ å›½å›žä¸­å›½å¤å·¥ ä¸€æŠµè¾¾ä¾¿è¢«å¸¦èµ°éš”ç¦»</a></li>
+<hr>
+
+<strong>æœ¬æ–‡è½¬è‡ª<a href="https://www.epochtimes.com">å¤§çºªå…ƒ</a>ï¼ˆå›½å†…éœ€ç”¨<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æ‰èƒ½è®¿é—®ï¼‰</strong><p>ä¸‹è½½<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æµè§ˆåŽŸæ–‡ï¼š<a href="https://www.epochtimes.com/gb/19/12/8/n11708547.htm">å…šå†…åå´æ–¯æ€€é€€ä¸åˆ†åŒº å´æ•¦ä¹‰ï¼šä¸èƒ½éšä¾¿æ‹”æŽ‰</a></p><hr>
+
+<strong>æ‰‹æœºä¸Šé•¿æŒ‰å¹¶å¤åˆ¶ä¸‹é¢äºŒç»´ç åˆ†äº«æœ¬æ–‡ç« ï¼š</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/tjvrql262/djy/blob/master/gb/19/12/8/n11708547.md%231" title="åˆ†äº«æœ¬æ–‡ç« "></td><td VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/wei-f1.jpg" title="ä¸­å…±çš„ä¼ªç«éª—å±€"  alt="ä¸­å…±çš„ä¼ªç«éª—å±€"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yong-h.jpg" title="æ°¸æ’çš„è§è¯"  alt="æ°¸æ’çš„è§è¯"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/shang-lnz.jpg" title="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"  alt="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z3.jpg" title="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"  alt="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z4.jpg" title="è¯äººæè¿°æ´»æ‘˜ææ€–"  alt="è¯äººæè¿°æ´»æ‘˜ææ€–"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z1.jpg" title="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"  alt="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/ma-ks.jpg" title="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"  alt="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/chang-zs.jpg" title="è—å­—çŸ³ è•´å¤©æœº"  alt="è—å­—çŸ³ è•´å¤©æœº"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/st1.jpg" title="å…³æ³¨3äº¿äººä¸‰é€€"  alt="å…³æ³¨3äº¿äººä¸‰é€€"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jie-t.jpg" title="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"  alt="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/gao-zs.jpg" title="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"  alt="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj1.jpg" title="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"  alt="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj2.jpg" title="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"  alt="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/liangan.jpg" title="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"  alt="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jia-ndzl.jpg" title="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"  alt="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xiao-wd.jpg" title="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"  alt="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yindu.jpg" title="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"  alt="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xie-j.jpg" title="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"  alt="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/li-up.jpg" title="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"  alt="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl2.jpg" title="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"  alt="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zhen-h.jpg" title="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"  alt="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/dalu-sk.jpg" title="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"  alt="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl1.jpg" title="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"  alt="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/fq1.jpg" title="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"  alt="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"></a><br></td></tr></table>
